recursion.lessons.recursion.spiral.Spiral.scala.error
Spiral:3: error: reassignment to val
	if (steps=0) {
                 ^Spiral:6: error: not found: value lenght
	avance(lenght);
               ^Spiral:8: error: not found: value lenght
  	spiral(steps-1, angle, lenght+increment, increment);
                               ^